# aedos

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  RETRIEVAL_DELETION_SCOPE.md  aedos_architecture.md  aedos_implementation_plan.md  patterns.yaml  phase9_parity_report.md  predicates.yaml  pyproject.toml
.claude/: settings.local.json
autonomous_state/: COMMIT_PROTOCOL.md  CURRENT_STATE.md  DECISIONS.md  HANDOFF.md  MISSION.md  NEXT_STEPS.md  OBSERVATIONS.md  SESSION_LOG.md
data/: .gitkeep
deploy/: .env.example  Caddyfile  README.md  aedos.service
docs/: architecture.md  architecture_core_vs_wikidata.md  cold_start.md  evaluation_methodology.md  phase_10_5_runbook.md  phase_A_plan.md  phase_B_report.md  phase_D_report.md  phase_F_plan.md  v0.16_planning.md  v0_16_1_planning.md  v0_16_synthesis.md
scripts/: analyze_cache.py  analyze_costs.py  analyze_substitutions.py  audit_predicate_directions.py  cluster_1_diagnostic.py  cluster_2_corpus_align.py  cluster_2_validation.py  cluster_2_validation_aggregate.py  cluster_3_validation.py  d16_compare.py  d16_recalibrate.py  d53_investigation.py  d53_investigation_hybrid.py  d53_validation.py  d5_attribute.py  d5_compare.py  d5_diagnostic.py  diag_d16.py  diagnose_claim.py  dogfood_glm.py  dogfood_hallucination_corpus.py  eval_harness.py  medium_bar_aggregate.py  medium_bar_run.py  medium_bar_step1_run.py  medium_bar_step1_smoke.py  phase_10_5_run.py  reset_db.py  smoke_test_glm.py  summarize_corpus_run.py
seeds/: SEED_VERSION.txt  load_seeds.py  predicate_translation.json
src/: __init__.py  app.py  corrector.py  cost.py  extractor.py  fact_store.py  llm_client.py  llm_router.py  openai_client.py  pattern_registry.py  pipeline.py  predicate_registry.py  router.py  session_markers.py
static/: app.js  index.html  style.css  trace.css  trace.js  v2_trace.css  v2_trace.js
tests/: conftest.py  smoke_corpus.jsonl  smoke_dispatcher.py  test_analyze_cache.py  test_analyze_costs.py  test_app_chat_endpoint.py  test_app_dispatch_one_endpoint.py  test_app_extract_endpoint.py  test_app_inspector_endpoints.py  test_app_routing_memo_endpoint.py  test_app_substrate_entity_equivalence_endpoint.py  test_app_substrate_entity_taxonomy_endpoint.py  test_app_substrate_predicate_distribution_endpoint.py  test_app_substrate_predicate_equivalence_endpoint.py  test_cache_api.py  test_cache_lookup.py  test_cache_writes.py  test_canonical_constants.py  test_chat_backends.py  test_code_pipeline.py  test_code_triage.py  test_code_writer.py  test_comparative.py  test_comparator.py  test_corrector.py  test_cost.py  (+65 more)
(+683 files in other folders)
