[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aedos"
version = "0.16.0"
description = "Claim-verification and conversational-memory research prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    # Used unconditionally by aedos.layer4_sources.kb_verifier (v0.16.2
    # precision-aware date parsing). Previously imported but undeclared — a
    # clean `pip install -e .` then 500'd /chat and /verify and could not even
    # collect the test suite. Declared here so the deploy actually serves.
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aedos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra"
asyncio_mode = "auto"
